--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "author": "Shubham Gupta",
+  "scripts": {
+    "dev": "nodemon server.js"
+  },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "resolve-url-loader": "5.0.0",
+    "sass": "^1.63.6",
+    "sass-loader": "12.1.0",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^7.3.4"
   }
 }
