--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "connect-mongo": "^5.0.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^7.3.4"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.4.1",
+    "noty": "^3.2.0-beta-deprecated"
   }
 }
