--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -26,6 +27,8 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
-    "noty": "^3.2.0-beta-deprecated"
+    "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
