--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^7.4.1",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.2"
   }
 }
