--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "author": "Shubham Gupta",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "watch": "mix watch",
+    "production": ""
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
@@ -16,6 +18,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
@@ -31,6 +34,7 @@
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "2.3.0",
+    "stripe": "^13.7.0"
   }
 }
